--- a/.gitignore
+++ b/.gitignore
@@ -97,6 +97,7 @@ public/
 
 ### VisualStudioCode ###
 .vscode/*
+!.vscode/sftp.json
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
