add ignore database setting

--- a/.gitignore
+++ b/.gitignore
@@ -133,4 +133,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+####### my setting #######
+test-backend/src/database/
+
 # End of https://www.gitignore.io/api/node,windows,visualstudiocode
